bin/tests/lexer/lexer-comments-error.swg
// ============================================================================
// Lexer Comments Error
// ============================================================================

// swc-option lex-only

// --- Unclosed comment at EOF ---
/* This comment is never closed                // swc-expected-error {{lex_err_unclosed_comment}}
